--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>Курс - Git и GitHup</title>
+  <title>Практикуем Git</title>
 </head>
 <body>
   <h1>Главная страница</h1>
   <p>
     На этой странице будет много интересного контента
   </p>
-  <a href="pages/about.html">
-    Перейди на следующую страницу
-  </a>
 </body>
 </html>
