--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Практикуем Git</title>
 </head>
 <body>
-  <h1>Всем привет</h1>
+  <h1 class="tite">Всем привет</h1>
   <p>
     На этой странице будет много интересного контента
   </p>
