--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   <p>
     На этой странице будет много интересного контента
   </p>
+  <p class="description">
+    Временное описание данной страницы
+  </p>
 </body>
 </html>
