--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>Практикуем Git</title>
 </head>
-<body>
+<body class="sity-body">
   <h1 class="tite">Всем привет</h1>
   <p>
     На этой странице будет много интересного контента
